--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@webpack-cli/generators": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.2",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
