--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "module": "es6",
     "target": "es5",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
   },
   "files": ["src/index.ts"]
 }
